# FEA-Face-enabled-attendance-system-

./: .gitignore  README.md  database.py  del.py  goals.txt
backend/: CMakeLists.txt  __init__.py  cosineSim.cu  detect_faces.py  embedding.py  facenet.py  kernel.py  mysqlConnector.py  recognize.py  resize.py  schema.sql  storage.py
backend/accountHandle/: userHandle.py
backend/alignment/: align_faces.py
backend/gpuKernel/: main.cpp  median_blur.cu  median_f.h  run.sh
backend/gpuKernel/.metadata/: version.ini
backend/gpuKernel/.metadata/.plugins/org.eclipse.core.resources/.root/: .markers  2.tree
backend/gpuKernel/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
backend/gpuKernel/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
backend/gpuKernel/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
backend/gpuKernel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dakshta_0/: node.properties
backend/gpuKernel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dakshta_0/FP.local.files_0/: node.properties
backend/gpuKernel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dakshta_0/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
backend/gpuKernel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dakshta_0/H.local_16/: node.properties
backend/gpuKernel/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
backend/gpuKernel/src/: main.cpp  median_blur.cu
backend/lmdb_util/: store.py
backend/model/: CMakeLists.txt  loss.cpp
backend/model/include/: resnet.h
backend/model/src/: loss.cpp  resnet.cpp
backend/torch_t/: torchtest.cpp
embeddings_store/CSE/1/: 123123.pickle
frontend/: base.py  setup.py  three.html  wsgi.py
frontend/accountHandle/: auth.py  forms.py  models.py  routes.py
frontend/accountHandle/templates/: login.jinja2  signup.jinja
frontend/blk-design-system-master/: base.py
frontend/blk-design-system-master/examples/: landing-page.html
frontend/static/: base.css  form.css  try.css
frontend/static/assets/css/: blk-design-system.css
frontend/templates/: attendance.html  base.html  clientVideo.html  client_detect.html  del.html  form.html  form1.html  home.html  index.html  live_train.html  navbar.html  try.html  video_feed.html
frontend/templates/upload/: assign.html  ia.html  lab.html  marks.html  project.html  upload.html
frontend/templates/user/: form.html
frontend/templates/viz/: attendance.html  marks.html  student_details.html
frontend/upload/: form.js
frontend/viz/: viz.html
frontend/vizApp/: __init__.py  dashApp.py
frontend/vizApp/templates/: viz.html
model/: CMakeLists.txt  main.cpp  train.cpp
model/include/: a.out  load.hpp  logging.hpp  metric.hpp  train.hpp
model/src/: CMakeLists.txt  load.cpp  metric.cpp  train.cpp
recognition/: encodings.py
stackpath.bootstrapcdn.com/bootswatch/4.5.2/cyborg/: bootstrap.min.css
